# cmocking

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  device.c  device.h  device_mock.c  device_mock.cpp  main.c  rx.c  rx.h  rx_test.cpp
